# chess-rllm

./: .gitignore  CHECKPOINTS.md  README.md  data.py  datagen.py  eval.py  generate.py  generate_sf_vs_sf_data.py  generate_sft_data.py  launch_grpo_after_sft.sh  pyproject.toml  sft_train.py  train.py
conf/: sft.yaml  train.yaml
conf/rllm/backend/: tinker.yaml
scripts/: eval_vs_stockfish.py  generate_data.sh  run_full_pipeline.sh  run_pipeline.sh  run_sft_two_phase.sh
src/: cleanup_checkpoints.py  datagen.py  eval.py  eval_vs_stockfish.py  gen_english_data.py  gen_opening_grpo.py  list_checkpoints.py  prompt.py  sft_train.py  train.py
